# Settlement

./: .gitignore  CMakeLists.txt  README.md
asset-source/: Circular House.blend  Circular House.blend1  Circular House.blend2  Cubic House.blend  Cubic House.blend1  Cubic House.blend2
assets/: Circular House.dae  Circular House.mtl  heightmap.raw
doc/: Classes.graffle
modules/: FindCairomm.cmake  FindCairomm_old.cmake  FindSFML.cmake
source/: AABox.h  Application.cpp  Application.h  ApplicationObject.h  Asset.h  AssetManager.h  BoundingVolume.cpp  BoundingVolume.h  Camera.cpp  Camera.h  Console.h  ConsoleWindow.cpp  ConsoleWindow.h  Error.cpp  Error.h  Frustum.h  GameScene.cpp  GameScene.h  Geometry.cpp  Geometry.h  ImageAsset.cpp  ImageAsset.h  Job.cpp  Job.h  JobQueue.cpp  JobQueue.h  JobWorker.cpp  JobWorker.h  Line.h  LoadableAsset.cpp  LoadableAsset.h  Logger.cpp  Logger.h  MeshInterface.h  Model.h  ObjMeshAsset.cpp  ObjMeshAsset.h  OrbitingCamera.cpp  OrbitingCamera.h  Path.cpp  (+30 more)
source/gl/: Buffer.cpp  Buffer.h  Primitives.cpp  Primitives.h  Texture.cpp  Texture.h
source/model/: Building.h  Construction.h  HeadquartersBuilding.h
source/ui/: Manager.cpp  Manager.h  Window.cpp  Window.h
